--- a/style.scss
+++ b/style.scss
@@ -352,6 +352,7 @@
 
   .rightTop {
     .layer {
+      align-self: flex-end;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -360,12 +361,10 @@
         color: $footerWhiteText;
         font-size: 22pt / $fontScale;
         text-shadow: $SHADOW;
-        margin-right: 30px;
-        margin-right: 56px;
         margin-left: 4px;
       }
       .img {
-        width: 120px;
+        min-width: 120px;
         height: 82px;
         background: url("./data/Header-Footer.png");
         background-position: 0px -61px;
@@ -536,7 +535,7 @@
   .centerBottom {
     justify-content: space-between;
     .wholeNav {
-      width: 120%;
+      width: 126%;
       .nav1 {
         display: flex;
         flex-direction: row;
