--- a/_Variables.scss
+++ b/_Variables.scss
@@ -31,3 +31,15 @@ $fontScale: 2.1;
     @return $result;
 }
 /*-----------------------------------------*/
+@mixin flex ($just, $align, $dir:row){
+    display: flex;
+        @if $just == c { $just: center; }
+        @if $just == s { $just: flex-start; }
+        @if $just == e { $just: flex-end; }
+        @if $align == c { $align: center; }
+        @if $align == s { $align: flex-start; }
+        @if $align == e { $align: flex-end; }
+    justify-content: $just;
+    align-items: $align;
+    flex-direction: $dir;
+}
