--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 
 .pillButton {
   color: $themeBlue;
-  font-family: main;
+  font-family: dark-sans;
   background-color: white;
   border-radius: 15px;
   border: none;
@@ -31,7 +31,7 @@
   border-radius: 24px;
   border: none;
   background-color: $coolOrange;
-  font-family: "main";
+  font-family: dark-sans;
   box-shadow: $SHADOW;
   width: 133px;
   font-size: 18pt / $fontScale;
@@ -73,7 +73,7 @@
       .siteGearIcon {
         width: 49px;
         height: 29px;
-        background: url("./data/Header-Footer.png");
+        background: url("./images/img/Header-Footer.png");
         background-position: -69px -149px;
         background-size: 1057%;
       }
@@ -96,7 +96,7 @@
       justify-content: center;
       align-items: flex-end;
       .logo {
-        background: url("./data/Header-Footer.png");
+        background: url("./images/img/Header-Footer.png");
         width: 122px;
         height: 122px;
         background-position: 121px 124px;
@@ -110,11 +110,13 @@
       align-items: center;
       padding: 0 35px;
       gap: 35px;
+      padding-bottom: 25px;
       .rightSideImage {
         width: 180%;
         position: relative;
         right: 53px;
         z-index: -1;
+
       }
       .buttons {
         display: flex;
@@ -141,7 +143,7 @@
           > .img {
             width: 33px;
             height: 33px;
-            background: url("./data/Header-Footer.png");
+            background: url("./images/img/Header-Footer.png");
             background-size: 1380%;
             &.one {
               background-position: -202px -4px;
@@ -241,7 +243,7 @@
         background-color: whitesmoke;
         box-shadow: 5px 5px 20px rgba(200, 200, 200, 0.75);
         .calendar {
-          background: url(./data/Header-Footer.png);
+          background: url('./images/img/Header-Footer.png');
           height: 63px;
           width: 63px;
           margin: auto;
@@ -253,6 +255,9 @@
           font-size: 7px;
           text-align: center;
           font-weight: bold;
+          position: absolute;
+          bottom: -2px;
+          left: 19px;
         }
       }
     }
@@ -271,6 +276,8 @@
     .navBar {
       grid-area: navBar;
       nav {
+        position: static;
+        margin: 0;
         width: 100%;
         background-color: $themeBlue;
         display: flex;
@@ -282,19 +289,25 @@
         .item {
           color: $headerWhiteText;
           font-size: 13px;
+          margin: 0;
+          padding: 10px 0;
         }
       }
     }
     .space {
       grid-area: space;
     }
-    .content {
+    .slider {
       grid-area: content;
       margin-left: 5px;
       .pic {
         width: 100%;
         height: 100%;
         background-color: orange;
+        color: white;
+        font-weight: bold;
+        font-size: 25px;
+        @include flex(c,c);
       }
     }
     .spaceRightSide {
@@ -308,12 +321,17 @@
         width: 150px;
         text-align: center;
         padding-bottom: 20px;
+        line-height: 24px;
       }
     }
   }
 }
 
 .footer {
+  * {
+      box-sizing: content-box !important;
+  }
+
   display: grid;
   height: 600px;
   grid-template-columns: 26% 49% 25%;
@@ -326,309 +344,353 @@
   margin-top: 50px;
 
   > * {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
   }
+
   > :nth-child(1),
   > :nth-child(2),
   > :nth-child(3) {
-    justify-content: flex-end;
+      justify-content: flex-end;
   }
+
   > :nth-child(4),
   > :nth-child(5),
   > :nth-child(6) {
-    justify-content: flex-start;
+      justify-content: flex-start;
   }
+
   > :nth-child(7),
   > :nth-child(8),
   > :nth-child(9) {
-    justify-content: flex-start;
+      justify-content: flex-start;
   }
+
   > :nth-child(4),
   > :nth-child(6) {
-    padding-top: 18px;
+      padding-top: 18px;
   }
 
   .rightTop {
-    .layer {
-      align-self: flex-end;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      height: 75px;
-      .text {
-        color: $footerWhiteText;
-        font-size: 22pt / $fontScale;
-        text-shadow: $SHADOW;
-        margin-left: 4px;
-      }
-      .img {
-        min-width: 120px;
-        height: 82px;
-        background: url("./data/Header-Footer.png");
-        background-position: 0px -61px;
-        background-size: 403%;
-      }
-    }
-    .inputwrapper {
-      position: relative;
-      margin-bottom: 12px;
-      .emailInput {
-        border-radius: 21px;
-        padding: 9px 16px;
-        border: none;
-        width: 250px;
-        background-color: $footerEmailInputBackground;
-        box-shadow: 3px 3px 3px #0000006b;
-        font-family: main;
-        font-size: 20pt / $fontScale;
-        color: $footerEmailInputColor;
-        &:focus {
-          outline: none;
-        }
-      }
-      .icon {
-        font-size: 18px;
-        position: absolute;
-        left: 5px;
-        top: 4px;
-        color: #e9e9e9;
-        background-color: $footerBackground;
-        padding: 5px;
-        border-radius: 50%;
-      }
-    }
-  }
-  .centerTop {
-    .img {
-      width: 90px;
-      height: 90px;
-      margin-bottom: 5px;
-      background: url("./data/Header-Footer.png");
-      background-position: 90px 0;
-      background-size: 505%;
-    }
-    .layer1 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      margin-bottom: 20px;
-      > p {
-        margin: 2px 0;
-        color: $footerWhiteText;
-      }
-      p.title {
-        font-size: 25pt / $fontScale;
-        letter-spacing: letterSpace(100) * 1px;
-      }
-      p.address {
-        font-size: 20pt / $fontScale;
-      }
-      p.site {
-        font-size: 25pt / $fontScale;
-        letter-spacing: letterSpace(100) * 1px;
-      }
-      p.num {
-        font-size: 20pt / $fontScale;
-        letter-spacing: letterSpace(50) * 1px;
-      }
-    }
-  }
-  .leftTop {
-    gap: 40px;
-    .counsel {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .number {
-        font-size: 25pt / $fontScale;
-        color: $footerWhiteText;
-        position: absolute;
-        top: 0;
-        right: 8px;
-        text-shadow: $SHADOW;
-        letter-spacing: letterSpace(50) * 1px;
-      }
-      .img {
-        position: relative;
-        right: 41px;
-        top: 4px;
-        width: 89px;
-        height: 94px;
-        background: url("./data/Header-Footer.png");
-        background-position: -102px -58px;
-        background-size: 499%;
-        margin-bottom: 6px;
-      }
-      .info {
-        color: $footerWhiteText;
-        font-size: 20pt / $fontScale;
-        text-shadow: $SHADOW;
-        letter-spacing: letterSpace(50) * 1px;
-      }
-    }
-  }
-  .centerCenter {
-    .hr {
-      width: 75%;
-      margin: 0;
-      background: linear-gradient(
-        to left,
-        transparent,
-        $footerOrangeLine,
-        transparent
-      );
-      height: 5px;
-    }
-    .layer2 {
-      display: flex;
-      flex-direction: row;
-      gap: 30px;
-      margin-top: 32px;
-      .item {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 10px;
-        > .img {
-          width: 33px;
-          height: 33px;
-          background: url("./data/Header-Footer.png");
-          background-size: 1380%;
-          &.one {
-            background-position: -103px 34px;
-          }
-          &.two {
-            background-position: -67px 35px;
-          }
-          &.three {
-            background-position: -37px 34px;
-            width: 28px;
-            background-size: 1624%;
-          }
-          &.four {
-            background-position: -1px 34px;
-            background-size: 1325%;
-          }
-        }
-        > span {
-          color: $footerWhiteText;
-          font-size: 18pt / $fontScale;
-        }
-      }
-    }
-  }
-  .rightBottom {
-    .eNamad {
-      width: 130px;
-      background-color: white;
-      display: block;
-      box-shadow: $EnamadShadow;
-      border-radius: 30px;
-      border: 15px solid $Enamad-border;
-    }
-  }
-  .centerBottom {
-    justify-content: space-between;
-    .wholeNav {
-      width: 126%;
-      .nav1 {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 30px;
+      .layer {
+          align-self: flex-end;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          height: 70px;
 
-        > .item {
-          color: $footerWhiteText;
-          font-size: 18pt / $fontScale;
-        }
+          .text {
+              color: $footerWhiteText;
+              font-size: 22pt / $fontScale;
+              text-shadow: $SHADOW;
+              margin-left: 4px;
+          }
+
+          .img {
+              min-width: 120px;
+              height: 82px;
+              background: url("./images/img/Header-Footer.png");
+              background-position: 0px -63px;
+              background-size: 403%;
+          }
       }
-      .line {
-        width: 75%;
-        display: block;
-        margin: auto;
-        margin-top: 25px;
-        margin-bottom: 15px;
-        background: linear-gradient(
-          to right,
-          transparent,
-          $footerWhiteLine,
-          transparent
-        );
-        height: 1px;
+
+      .inputwrapper {
+          position: relative;
+          margin-bottom: 12px;
+
+          .emailInput {
+              border-radius: 21px;
+              padding: 9px 16px;
+              border: none;
+              width: 250px;
+              background-color: $footerEmailInputBackground;
+              box-shadow: 3px 3px 3px rgba(0,0,0,0.419);
+              font-family: Dark-sans;
+              font-size: 20pt / $fontScale;
+              color: $footerEmailInputColor;
+
+              &:focus {
+                  outline: none;
+              }
+          }
+
+          .icon {
+              font-size: 18px;
+              position: absolute;
+              left: 5px;
+              top: 4px;
+              color: #e9e9e9;
+              background-color: $footerBackground;
+              padding: 5px;
+              border-radius: 50%;
+          }
       }
-      .nav2 {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 35px;
-        .item {
-          color: $coolOrange;
-          font-size: 24pt / $fontScale;
-        }
-      }
-    }
-    .layer3 {
-      > img {
-        width: 35px;
-      }
-      .footerImage {
-        width: 35px;
-        height: 35px;
-        background: url("./data/Header-Footer.png");
-        background-size: 1182%;
-        background-position-y: 72px;
-        &.one {
-          background-position-x: -1px;
-        }
-        &.two {
-          background-position-x: -38px;
-        }
-        &.three {
-          background-position-x: -76px;
-        }
-        &.four {
-          background-position: -113px 74px;
-        }
-        &.five {
-          background-position: -150px 74px;
-        }
-        &.six {
-          background-position: -186px 74px;
-        }
-        &.seven {
-          background-position: -224px 74px;
-        }
-      }
-      display: flex;
-      flex-direction: row-reverse;
-      gap: 20px;
-      margin-bottom: 40px;
-    }
   }
+
+  .centerTop {
+      .img {
+          width: 90px;
+          height: 90px;
+          margin-bottom: 5px;
+          background: url("./images/img/Header-Footer.png");
+          background-position: 90px 0;
+          background-size: 505%;
+      }
+
+      .layer1 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          margin-bottom: 20px;
+
+          > p {
+              margin: 2px 0;
+              color: $footerWhiteText;
+              line-height: 24px;
+          }
+
+          p.title {
+              font-size: 25pt / $fontScale;
+              letter-spacing: letterSpace(100) * 1px;
+          }
+
+          p.address {
+              font-size: 20pt / $fontScale;
+          }
+
+          p.site {
+              font-size: 25pt / $fontScale;
+              letter-spacing: letterSpace(100) * 1px;
+          }
+
+          p.num {
+              font-size: 20pt / $fontScale;
+              letter-spacing: letterSpace(50) * 1px;
+          }
+      }
+  }
+
+  .leftTop {
+      gap: 40px;
+
+      .counsel {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          .number {
+              font-size: 25pt / $fontScale;
+              color: $footerWhiteText;
+              position: absolute;
+              top: 0;
+              right: 8px;
+              text-shadow: $SHADOW;
+              letter-spacing: letterSpace(50) * 1px;
+          }
+
+          .img {
+              position: relative;
+              right: 41px;
+              top: 4px;
+              width: 89px;
+              height: 94px;
+              background: url("./images/img/Header-Footer.png");
+              background-position: -102px -58px;
+              background-size: 499%;
+              margin-bottom: 6px;
+          }
+
+          .info {
+              color: $footerWhiteText;
+              font-size: 20pt / $fontScale;
+              text-shadow: $SHADOW;
+              letter-spacing: letterSpace(50) * 1px;
+          }
+      }
+  }
+
+  .centerCenter {
+      .hr {
+          width: 75%;
+          margin: 0;
+          background: linear-gradient( to left, transparent, $footerOrangeLine, transparent );
+          height: 5px;
+      }
+
+      .layer2 {
+          display: flex;
+          flex-direction: row;
+          gap: 30px;
+          margin-top: 32px;
+
+          .item {
+              display: flex;
+              flex-direction: column;
+              justify-content: flex-end;
+              align-items: center;
+              gap: 10px;
+
+              > .img {
+                  width: 33px;
+                  height: 33px;
+                  background: url("./images/img/Header-Footer.png");
+                  background-size: 1380%;
+
+                  &.one {
+                      background-position: -103px 34px;
+                  }
+
+                  &.two {
+                      background-position: -67px 35px;
+                  }
+
+                  &.three {
+                      background-position: -37px 34px;
+                      width: 28px;
+                      background-size: 1624%;
+                  }
+
+                  &.four {
+                      background-position: -1px 34px;
+                      background-size: 1325%;
+                  }
+              }
+
+              > a {
+                  color: $footerWhiteText;
+                  font-size: 18pt / $fontScale;
+              }
+          }
+      }
+  }
+
+  .rightBottom {
+      .eNamad {
+          width: 130px;
+          background-color: white;
+          display: block;
+          box-shadow: $EnamadShadow;
+          border-radius: 30px;
+          border: 15px solid $Enamad-border;
+      }
+  }
+
+  .centerBottom {
+      justify-content: space-between;
+
+      .wholeNav {
+          width: 126%;
+          nav {
+              position: static;
+              margin: initial;
+          }
+          .nav1 {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              gap: 30px;
+
+              > .item {
+                  color: $footerWhiteText;
+                  font-size: 18pt / $fontScale;
+              }
+          }
+
+          .line {
+              width: 75%;
+              display: block;
+              margin: auto;
+              margin-top: 25px;
+              margin-bottom: 15px;
+              background: linear-gradient( to right, transparent, $footerWhiteLine, transparent );
+              height: 1px;
+          }
+
+          .nav2 {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              gap: 35px;
+
+              .item {
+                  color: $coolOrange;
+                  font-size: 24pt / $fontScale;
+              }
+          }
+      }
+
+      .layer3 {
+          > img {
+              width: 35px;
+          }
+
+          .footerImage {
+              width: 35px;
+              height: 35px;
+              background: url("./images/img/Header-Footer.png");
+              background-size: 1182%;
+              background-position-y: 72px;
+
+              &.one {
+                  background-position-x: -1px;
+              }
+
+              &.two {
+                  background-position-x: -38px;
+              }
+
+              &.three {
+                  background-position-x: -76px;
+              }
+
+              &.four {
+                  background-position: -113px 74px;
+              }
+
+              &.five {
+                  background-position: -150px 74px;
+              }
+
+              &.six {
+                  background-position: -186px 74px;
+              }
+
+              &.seven {
+                  background-position: -224px 74px;
+              }
+          }
+
+          display: flex;
+          flex-direction: row-reverse;
+          gap: 20px;
+          margin-bottom: 40px;
+      }
+  }
+
   .leftBottom {
-    .img {
-      background: url(./data/Header-Footer.png);
-      height: 58px;
-      width: 133px;
-      position: relative;
-      bottom: 9px;
-      right: 9px;
-      background-position: -79px -5px;
-      background-size: 367%;
-    }
-    .telegraph {
-      color: $footerWhiteText;
-      border: 2px solid $footerWhiteText;
-      padding: 4px 18px;
-      border-radius: 16px;
-      box-shadow: $SHADOW;
-      font-size: 25pt / $fontScale;
-      margin-right: 25px;
-    }
+      .img {
+          background: url(./images/img/Header-Footer.png);
+          height: 58px;
+          width: 133px;
+          position: relative;
+          bottom: 9px;
+          right: 9px;
+          background-position: -79px -5px;
+          background-size: 367%;
+      }
+
+      .telegraph {
+          color: $footerWhiteText;
+          border: 2px solid $footerWhiteText;
+          padding: 4px 18px;
+          border-radius: 16px;
+          box-shadow: $SHADOW;
+          font-size: 25pt / $fontScale;
+          margin-right: 25px;
+      }
   }
 }
