--- a/style.css
+++ b/style.css
@@ -80,7 +80,34 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  gap: 10px;
+  gap: 20px;
+}
+
+.header .topBar .right .wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 4px;
+}
+
+.header .topBar .right .wrap .fa-envelope, .header .topBar .right .wrap .fa-phone {
+  font-size: 19px;
+  position: relative;
+  bottom: 2px;
+}
+
+.header .topBar .right > span {
+  font-size: 13px;
 }
 
 .header .topBar .center {
