--- a/style.css
+++ b/style.css
@@ -14,17 +14,17 @@
   font-weight: bold;
 }
 
-.signupLayer {
+.signupButtonLayer {
   position: relative;
 }
 
-.signupLayer .click {
+.signupButtonLayer .click {
   position: absolute;
   right: -28px;
   top: 1px;
   width: 78px;
   height: 54px;
-  background: url(./data/Header-Footer.png);
+  background: url("./images/img/Header-Footer.png");
   background-position: -5px -9px;
   background-size: 678%;
 }
