header side menu pic fixed. slider shadow made

--- a/_Variables.scss
+++ b/_Variables.scss
@@ -3,6 +3,8 @@ $orangeButtonText: rgb(74, 74, 228);
 
 $SHADOW: 3px 3px 5px rgba(16 ,16, 16, .75);
 $SHADOW-LIGHT: 3px 3px 5px rgba(16, 16, 16, 0.301);
+
+$greyMain-background: #f6f6f6;
 /*------------------HEADER-----------------*/
 $sideMenuLength: 230px;
 $headerWhiteText: rgb(247, 247, 247);
@@ -12,6 +14,14 @@ $themeBlueLight: #149bd9;
 $themeBlueDark: #0d72a1;
 
 $themePurple: #d50c52;
+
+$slider-shadow: 0px 0px 41px rgba(0, 0, 0,.38);
+/*------------------HEADER-----------------*/
+
+/*-------------ATNA HOST-----------------*/
+$atnaHost-blue: #64abe9;
+$atnaHost-orange: #f58232;
+/*-------------ATNA HOST-----------------*/
 
 /*-------------FOOOTER-------------------*/
 $footerBackground: #444444;
