--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@
     top: 1px;
     width: 78px;
     height: 54px;
-    background: url('./images/img/Header-Footer.png');
+    background: url("./images/img/Header-Footer.png");
     background-position: -5px -9px;
     background-size: 678%;
   }
@@ -67,9 +67,10 @@
       justify-content: flex-start;
       gap: 20px;
       .wrap {
-        @include flex(c,c);
+        @include flex(c, c);
         gap: 4px;
-        .fa-envelope, .fa-phone {
+        .fa-envelope,
+        .fa-phone {
           font-size: 19px;
           position: relative;
           bottom: 2px;
@@ -78,7 +79,6 @@
           font-size: 13px;
         }
       }
-
     }
     .center {
       gap: 25px;
@@ -129,13 +129,12 @@
       gap: 35px;
       padding-bottom: 25px;
       .rightSideImage {
-        background: url('./images/img/Asset 3-8.png') no-repeat;
+        background: url("./images/img/Asset 3-8.png") no-repeat;
         background-size: 100%;
         width: 288px;
         height: 205px;
 
         z-index: 0;
-
       }
       .buttons {
         display: flex;
@@ -166,7 +165,10 @@
             background-size: 1380%;
             &.one {
               background-position: -202px -4px;
-            }            &.one + span { color: $themePurple; }
+            }
+            &.one + span {
+              color: $themePurple;
+            }
             &.two {
               background-position: -214px 34.5px;
             }
@@ -185,7 +187,6 @@
             font-weight: bold;
             font-size: 13px;
           }
-
         }
       }
       .inputWrapper {
@@ -207,7 +208,7 @@
           position: absolute;
           right: 12px;
           top: 13px;
-          color: $themeBlue
+          color: $themeBlue;
         }
       }
     }
@@ -262,7 +263,7 @@
         background-color: whitesmoke;
         box-shadow: 5px 5px 20px rgba(200, 200, 200, 0.75);
         .calendar {
-          background: url('./images/img/Header-Footer.png');
+          background: url("./images/img/Header-Footer.png");
           height: 63px;
           width: 63px;
           margin: auto;
@@ -328,7 +329,7 @@
         color: white;
         font-weight: bold;
         font-size: 25px;
-        @include flex(c,c);
+        @include flex(c, c);
       }
     }
     .spaceRightSide {
@@ -349,8 +350,8 @@
 }
 
 .atnaHost {
-  padding:  45px 0;
-  @include flex(c,c);
+  padding: 45px 0;
+  @include flex(c, c);
   font-size: 29px;
   background-color: $greyMain-background;
   color: $atnaHost-blue;
@@ -358,14 +359,67 @@
     color: $atnaHost-orange;
     margin-right: 5px;
   }
-  &::before, &::after {
-    content: '☻';
+  &::before,
+  &::after {
+    content: "☻";
+  }
+}
+
+.mainPageSection {
+  .title {
+    .pic {
+    }
+    .text {
+    }
+  }
+  .flex {
+    @include flex(c, c);
+    gap: 50px;
+    .box {
+      border: 1px solid black;
+      border-radius: 12px;
+      position: relative;
+      @include cube(200px);
+      .colored {
+        border: 1px solid black;
+        color: white;
+        position: absolute;
+        top: -5px;
+        left: 0;
+        right: 0;
+        text-align: center;
+        .step {
+          &::before {
+            font-size: 18px;
+          }
+        }
+      }
+      .text {
+        position: absolute;
+        bottom: 0px;
+        text-align: center;
+        left: 0;
+        right: 0;
+      }
+      $colors: #ffd413, #ff9b0f, #fe3061, #02aeba;
+      @for $index from 1 through length($colors) {
+        $item: nth($colors, $index);
+        &.box#{$index} {
+          & .colored {
+            background-color: $item;
+            & .step::before {
+              content: "#{$index}";
+            }
+          }
+        }
+      }
+    }
   }
 }
 
 .footer {
   * {
-      box-sizing: content-box !important;
+    box-sizing: content-box !important;
   }
 
   display: grid;
@@ -380,353 +434,363 @@
   margin-top: 50px;
 
   > * {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 
   > :nth-child(1),
   > :nth-child(2),
   > :nth-child(3) {
-      justify-content: flex-end;
+    justify-content: flex-end;
   }
 
   > :nth-child(4),
   > :nth-child(5),
   > :nth-child(6) {
-      justify-content: flex-start;
+    justify-content: flex-start;
   }
 
   > :nth-child(7),
   > :nth-child(8),
   > :nth-child(9) {
-      justify-content: flex-start;
+    justify-content: flex-start;
   }
 
   > :nth-child(4),
   > :nth-child(6) {
-      padding-top: 18px;
+    padding-top: 18px;
   }
 
   .rightTop {
-      .layer {
-          align-self: flex-end;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          height: 70px;
+    .layer {
+      align-self: flex-end;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 70px;
 
-          .text {
-              color: $footerWhiteText;
-              font-size: 22pt / $fontScale;
-              text-shadow: $SHADOW;
-              margin-left: 4px;
-          }
-
-          .img {
-              min-width: 120px;
-              height: 82px;
-              background: url("./images/img/Header-Footer.png");
-              background-position: 0px -63px;
-              background-size: 403%;
-          }
+      .text {
+        color: $footerWhiteText;
+        font-size: 22pt / $fontScale;
+        text-shadow: $SHADOW;
+        margin-left: 4px;
       }
 
-      .inputwrapper {
-          position: relative;
-          margin-bottom: 12px;
-
-          .emailInput {
-              border-radius: 21px;
-              padding: 9px 16px;
-              border: none;
-              width: 250px;
-              background-color: $footerEmailInputBackground;
-              box-shadow: 3px 3px 3px rgba(0,0,0,0.419);
-              font-family: Dark-sans;
-              font-size: 20pt / $fontScale;
-              color: $footerEmailInputColor;
-
-              &:focus {
-                  outline: none;
-              }
-          }
-
-          .icon {
-              font-size: 18px;
-              position: absolute;
-              left: 5px;
-              top: 4px;
-              color: #e9e9e9;
-              background-color: $footerBackground;
-              padding: 5px;
-              border-radius: 50%;
-          }
+      .img {
+        min-width: 120px;
+        height: 82px;
+        background: url("./images/img/Header-Footer.png");
+        background-position: 0px -63px;
+        background-size: 403%;
       }
+    }
+
+    .inputwrapper {
+      position: relative;
+      margin-bottom: 12px;
+
+      .emailInput {
+        border-radius: 21px;
+        padding: 9px 16px;
+        border: none;
+        width: 250px;
+        background-color: $footerEmailInputBackground;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.419);
+        font-family: Dark-sans;
+        font-size: 20pt / $fontScale;
+        color: $footerEmailInputColor;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .icon {
+        font-size: 18px;
+        position: absolute;
+        left: 5px;
+        top: 4px;
+        color: #e9e9e9;
+        background-color: $footerBackground;
+        padding: 5px;
+        border-radius: 50%;
+      }
+    }
   }
 
   .centerTop {
-      .img {
-          width: 90px;
-          height: 90px;
-          margin-bottom: 5px;
-          background: url("./images/img/Header-Footer.png");
-          background-position: 90px 0;
-          background-size: 505%;
+    .img {
+      width: 90px;
+      height: 90px;
+      margin-bottom: 5px;
+      background: url("./images/img/Header-Footer.png");
+      background-position: 90px 0;
+      background-size: 505%;
+    }
+
+    .layer1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-bottom: 20px;
+
+      > p {
+        margin: 2px 0;
+        color: $footerWhiteText;
+        line-height: 24px;
       }
 
-      .layer1 {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          margin-bottom: 20px;
-
-          > p {
-              margin: 2px 0;
-              color: $footerWhiteText;
-              line-height: 24px;
-          }
-
-          p.title {
-              font-size: 25pt / $fontScale;
-              letter-spacing: letterSpace(100) * 1px;
-          }
-
-          p.address {
-              font-size: 20pt / $fontScale;
-          }
-
-          p.site {
-              font-size: 25pt / $fontScale;
-              letter-spacing: letterSpace(100) * 1px;
-          }
-
-          p.num {
-              font-size: 20pt / $fontScale;
-              letter-spacing: letterSpace(50) * 1px;
-          }
+      p.title {
+        font-size: 25pt / $fontScale;
+        letter-spacing: letterSpace(100) * 1px;
       }
+
+      p.address {
+        font-size: 20pt / $fontScale;
+      }
+
+      p.site {
+        font-size: 25pt / $fontScale;
+        letter-spacing: letterSpace(100) * 1px;
+      }
+
+      p.num {
+        font-size: 20pt / $fontScale;
+        letter-spacing: letterSpace(50) * 1px;
+      }
+    }
   }
 
   .leftTop {
-      gap: 40px;
+    gap: 40px;
 
-      .counsel {
-          position: relative;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
+    .counsel {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-          .number {
-              font-size: 25pt / $fontScale;
-              color: $footerWhiteText;
-              position: absolute;
-              top: 0;
-              right: 8px;
-              text-shadow: $SHADOW;
-              letter-spacing: letterSpace(50) * 1px;
-          }
-
-          .img {
-              position: relative;
-              right: 41px;
-              top: 4px;
-              width: 89px;
-              height: 94px;
-              background: url("./images/img/Header-Footer.png");
-              background-position: -102px -58px;
-              background-size: 499%;
-              margin-bottom: 6px;
-          }
-
-          .info {
-              color: $footerWhiteText;
-              font-size: 20pt / $fontScale;
-              text-shadow: $SHADOW;
-              letter-spacing: letterSpace(50) * 1px;
-          }
+      .number {
+        font-size: 25pt / $fontScale;
+        color: $footerWhiteText;
+        position: absolute;
+        top: 0;
+        right: 8px;
+        text-shadow: $SHADOW;
+        letter-spacing: letterSpace(50) * 1px;
       }
+
+      .img {
+        position: relative;
+        right: 41px;
+        top: 4px;
+        width: 89px;
+        height: 94px;
+        background: url("./images/img/Header-Footer.png");
+        background-position: -102px -58px;
+        background-size: 499%;
+        margin-bottom: 6px;
+      }
+
+      .info {
+        color: $footerWhiteText;
+        font-size: 20pt / $fontScale;
+        text-shadow: $SHADOW;
+        letter-spacing: letterSpace(50) * 1px;
+      }
+    }
   }
 
   .centerCenter {
-      .hr {
-          width: 75%;
-          margin: 0;
-          background: linear-gradient( to left, transparent, $footerOrangeLine, transparent );
-          height: 5px;
-      }
+    .hr {
+      width: 75%;
+      margin: 0;
+      background: linear-gradient(
+        to left,
+        transparent,
+        $footerOrangeLine,
+        transparent
+      );
+      height: 5px;
+    }
 
-      .layer2 {
-          display: flex;
-          flex-direction: row;
-          gap: 30px;
-          margin-top: 32px;
+    .layer2 {
+      display: flex;
+      flex-direction: row;
+      gap: 30px;
+      margin-top: 32px;
 
-          .item {
-              display: flex;
-              flex-direction: column;
-              justify-content: flex-end;
-              align-items: center;
-              gap: 10px;
+      .item {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 10px;
 
-              > .img {
-                  width: 33px;
-                  height: 33px;
-                  background: url("./images/img/Header-Footer.png");
-                  background-size: 1380%;
+        > .img {
+          width: 33px;
+          height: 33px;
+          background: url("./images/img/Header-Footer.png");
+          background-size: 1380%;
 
-                  &.one {
-                      background-position: -103px 34px;
-                  }
-
-                  &.two {
-                      background-position: -67px 35px;
-                  }
-
-                  &.three {
-                      background-position: -37px 34px;
-                      width: 28px;
-                      background-size: 1624%;
-                  }
-
-                  &.four {
-                      background-position: -1px 34px;
-                      background-size: 1325%;
-                  }
-              }
-
-              > a {
-                  color: $footerWhiteText;
-                  font-size: 18pt / $fontScale;
-              }
+          &.one {
+            background-position: -103px 34px;
           }
+
+          &.two {
+            background-position: -67px 35px;
+          }
+
+          &.three {
+            background-position: -37px 34px;
+            width: 28px;
+            background-size: 1624%;
+          }
+
+          &.four {
+            background-position: -1px 34px;
+            background-size: 1325%;
+          }
+        }
+
+        > a {
+          color: $footerWhiteText;
+          font-size: 18pt / $fontScale;
+        }
       }
+    }
   }
 
   .rightBottom {
-      .eNamad {
-          width: 130px;
-          background-color: white;
-          display: block;
-          box-shadow: $EnamadShadow;
-          border-radius: 30px;
-          border: 15px solid $Enamad-border;
-      }
+    .eNamad {
+      width: 130px;
+      background-color: white;
+      display: block;
+      box-shadow: $EnamadShadow;
+      border-radius: 30px;
+      border: 15px solid $Enamad-border;
+    }
   }
 
   .centerBottom {
-      justify-content: space-between;
+    justify-content: space-between;
 
-      .wholeNav {
-          width: 126%;
-          nav {
-              position: static;
-              margin: initial;
-          }
-          .nav1 {
-              display: flex;
-              flex-direction: row;
-              justify-content: center;
-              gap: 30px;
+    .wholeNav {
+      width: 126%;
+      nav {
+        position: static;
+        margin: initial;
+      }
+      .nav1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 30px;
 
-              > .item {
-                  color: $footerWhiteText;
-                  font-size: 18pt / $fontScale;
-              }
-          }
-
-          .line {
-              width: 75%;
-              display: block;
-              margin: auto;
-              margin-top: 25px;
-              margin-bottom: 15px;
-              background: linear-gradient( to right, transparent, $footerWhiteLine, transparent );
-              height: 1px;
-          }
-
-          .nav2 {
-              display: flex;
-              flex-direction: row;
-              justify-content: center;
-              gap: 35px;
-
-              .item {
-                  color: $coolOrange;
-                  font-size: 24pt / $fontScale;
-              }
-          }
+        > .item {
+          color: $footerWhiteText;
+          font-size: 18pt / $fontScale;
+        }
       }
 
-      .layer3 {
-          > img {
-              width: 35px;
-          }
-
-          .footerImage {
-              width: 35px;
-              height: 35px;
-              background: url("./images/img/Header-Footer.png");
-              background-size: 1182%;
-              background-position-y: 72px;
-
-              &.one {
-                  background-position-x: -1px;
-              }
-
-              &.two {
-                  background-position-x: -38px;
-              }
-
-              &.three {
-                  background-position-x: -76px;
-              }
-
-              &.four {
-                  background-position: -113px 74px;
-              }
-
-              &.five {
-                  background-position: -150px 74px;
-              }
-
-              &.six {
-                  background-position: -186px 74px;
-              }
-
-              &.seven {
-                  background-position: -224px 74px;
-              }
-          }
-
-          display: flex;
-          flex-direction: row-reverse;
-          gap: 20px;
-          margin-bottom: 40px;
+      .line {
+        width: 75%;
+        display: block;
+        margin: auto;
+        margin-top: 25px;
+        margin-bottom: 15px;
+        background: linear-gradient(
+          to right,
+          transparent,
+          $footerWhiteLine,
+          transparent
+        );
+        height: 1px;
       }
+
+      .nav2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 35px;
+
+        .item {
+          color: $coolOrange;
+          font-size: 24pt / $fontScale;
+        }
+      }
+    }
+
+    .layer3 {
+      > img {
+        width: 35px;
+      }
+
+      .footerImage {
+        width: 35px;
+        height: 35px;
+        background: url("./images/img/Header-Footer.png");
+        background-size: 1182%;
+        background-position-y: 72px;
+
+        &.one {
+          background-position-x: -1px;
+        }
+
+        &.two {
+          background-position-x: -38px;
+        }
+
+        &.three {
+          background-position-x: -76px;
+        }
+
+        &.four {
+          background-position: -113px 74px;
+        }
+
+        &.five {
+          background-position: -150px 74px;
+        }
+
+        &.six {
+          background-position: -186px 74px;
+        }
+
+        &.seven {
+          background-position: -224px 74px;
+        }
+      }
+
+      display: flex;
+      flex-direction: row-reverse;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
   }
 
   .leftBottom {
-      .img {
-          background: url(./images/img/Header-Footer.png);
-          height: 58px;
-          width: 133px;
-          position: relative;
-          bottom: 9px;
-          right: 9px;
-          background-position: -79px -5px;
-          background-size: 367%;
-      }
+    .img {
+      background: url(./images/img/Header-Footer.png);
+      height: 58px;
+      width: 133px;
+      position: relative;
+      bottom: 9px;
+      right: 9px;
+      background-position: -79px -5px;
+      background-size: 367%;
+    }
 
-      .telegraph {
-          color: $footerWhiteText;
-          border: 2px solid $footerWhiteText;
-          padding: 4px 18px;
-          border-radius: 16px;
-          box-shadow: $SHADOW;
-          font-size: 25pt / $fontScale;
-          margin-right: 25px;
-      }
+    .telegraph {
+      color: $footerWhiteText;
+      border: 2px solid $footerWhiteText;
+      padding: 4px 18px;
+      border-radius: 16px;
+      box-shadow: $SHADOW;
+      font-size: 25pt / $fontScale;
+      margin-right: 25px;
+    }
   }
 }
