--- a/style.css
+++ b/style.css
@@ -571,33 +571,47 @@
 }
 
 .mainPageSection .flex .box {
-  border: 1px solid black;
-  border-radius: 12px;
+  border-radius: 20px;
   position: relative;
+  -webkit-box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.38);
+          box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.38);
   width: 200px;
   height: 200px;
 }
 
 .mainPageSection .flex .box .colored {
-  border: 1px solid black;
   color: white;
   position: absolute;
   top: -5px;
   left: 0;
   right: 0;
   text-align: center;
+  margin: 0 auto;
+  width: 150px;
+  padding: 10px 0;
+  -webkit-clip-path: polygon(0 0, 100% 0, 85% 100%, 15% 100%);
+          clip-path: polygon(0 0, 100% 0, 85% 100%, 15% 100%);
+  border-radius: 26px 26px 69px 69px;
+}
+
+.mainPageSection .flex .box .colored .step {
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .mainPageSection .flex .box .colored .step::before {
-  font-size: 18px;
+  margin-left: 10px;
+  font-size: 17px;
 }
 
 .mainPageSection .flex .box .text {
   position: absolute;
-  bottom: 0px;
+  bottom: 25px;
   text-align: center;
   left: 0;
   right: 0;
+  font-weight: bold;
+  font-size: 15px;
 }
 
 .mainPageSection .flex .box.box1 .colored {
@@ -608,12 +622,20 @@
   content: "1";
 }
 
+.mainPageSection .flex .box.box1 .text {
+  color: #ffd413;
+}
+
 .mainPageSection .flex .box.box2 .colored {
   background-color: #ff9b0f;
 }
 
 .mainPageSection .flex .box.box2 .colored .step::before {
   content: "2";
+}
+
+.mainPageSection .flex .box.box2 .text {
+  color: #ff9b0f;
 }
 
 .mainPageSection .flex .box.box3 .colored {
@@ -624,12 +646,20 @@
   content: "3";
 }
 
+.mainPageSection .flex .box.box3 .text {
+  color: #fe3061;
+}
+
 .mainPageSection .flex .box.box4 .colored {
   background-color: #02aeba;
 }
 
 .mainPageSection .flex .box.box4 .colored .step::before {
   content: "4";
+}
+
+.mainPageSection .flex .box.box4 .text {
+  color: #02aeba;
 }
 
 .footer {
