side menu length fixed and click and signup layer

--- a/style.scss
+++ b/style.scss
@@ -14,9 +14,10 @@
 
 .signupButtonLayer {
   position: relative;
+  padding-right: 26px;
   .click {
     position: absolute;
-    right: -28px;
+    right: -2px;
     top: 1px;
     width: 78px;
     height: 54px;
